--- a/teaching/elmecha/ora4.html
+++ b/teaching/elmecha/ora4.html
@@ -79,8 +79,8 @@
 								<p style="text-align: justify;">
 									Bár a mozgásegyenleteket könnyen fel tudjuk írni a Lagrange-i mechanika módszereivel, láthattuk, hogy azokat megoldani már általánosan nem mindig lehet.
 									Van viszont egy nevezetes rendszer amit jól ismerünk és szeretünk: a harmonikus oszcillátor.
-									Ha egy adott rendszert valamilyen közelítésben (\textit{pl. kis szögek}) át tudunk alakítani
-									valami oszcillátor-szerűvé (\textit{rezgések}) akkor vissza tudjuk vezetni a problémát valami jól megoldhatóra.
+									Ha egy adott rendszert valamilyen közelítésben (<i>pl. kis szögek</i>) át tudunk alakítani
+									valami oszcillátor-szerűvé (<i>rezgések</i>) akkor vissza tudjuk vezetni a problémát valami jól megoldhatóra.
 								</p>
 								<p style="text-align: justify;">
 									Emlékeztetőül egy darab egy dimenziós harmonikus oszcillátor Lagrange-függvénye (valamilyen általános $q$ koordinátával):
@@ -116,7 +116,7 @@
 									    \underline{q} = \sum_i c_i \underline{\eta}^i \cos{\left( \omega_i t + \delta_i\right)}
 									$$
 									alakban. Az állítás az, hogy ezek az $\underline{\eta}$ vektorok (amikből kikombinálható a tényleges megoldás) sajátvektorai az $\underline{\underline{A}}$ mátrixnak:
-									őket hívjuk \textbf{normálmódusoknak}. A szögfüggvényekben megjelenő $\omega$ frekvenciák pedig a hozzájuk tartozó \textbf{sajátfrekvenciák}.
+									őket hívjuk <b>normálmódusoknak</b>. A szögfüggvényekben megjelenő $\omega$ frekvenciák pedig a hozzájuk tartozó <b>sajátfrekvenciák</b>.
 								</p>
 								<p style="text-align: justify;">
 									Ez így még egész száraznak tűnhet: pár példa után megbarátkozunk vele. A lényeges lépések minden esetre:
@@ -137,7 +137,7 @@
 								<p style="text-align: justify;">
 									Vegyünk egy $M$ tömegű testet, és rögzítsük egy sínre a gravitációval merőlegesen.
 									Erre akasszunk egy $l$ hosszúságú ingát, rajta egy $m$ tömeggel.
-									\textit{Milyen mozgást végez a rendszer kis kitérések esetén?}
+									<i>Milyen mozgást végez a rendszer kis kitérések esetén?</i>
 								</p>
 								<div style="text-align: center;">
 									<img src="figs/lesson4/csuszkaloinga.png" alt="Ábra a csúszkáló ingáról" width="25%">
@@ -383,7 +383,7 @@
 								<p style="text-align: justify;">
 									Vegyünk egy $l$ hosszúságú ingát, aminek a végére rögzítsünk egy $M$ tömegpontot.
 									Ezen a ponton fűzzünk át az ingára merőlegesen egy sínt: erre pedig rakjunk egy $m$ tömegű testet.
-									\textit{Mik a normálmódusok?}
+									<i>Mik a normálmódusok?</i>
 								</p>
 								<div style="text-align: center;">
 									<img src="figs/lesson4/doltrudinga.png" alt="Ábra a rudas ingáról" width="25%">
@@ -516,12 +516,12 @@
 									$$
 									     (\partial_t^2 + \omega_0^2) G(t) = \delta(t)
 									$$
-									Ő azért jó nekünk, mert az ismeretében \textit{tetszőleges} $f(t)$ erőre meg tudjuk mondani a megoldást:
+									Ő azért jó nekünk, mert az ismeretében <i>tetszőleges</i> $f(t)$ erőre meg tudjuk mondani a megoldást:
 									$$
 									    x(t) = \int_{-\infty}^\infty G(t- t^\prime) f(t^\prime) \rd t^\prime
 									$$
 									Ezt ha behelyettesítjük az eredeti egyenletbe, akkor láthatjuk, hogy megoldja azt.
-									Minden esetre még csak alrébbtoltuk a problémát: most $x$ helyett a $G$ \textbf{Green-függvényt} kell megtalálnunk. 
+									Minden esetre még csak alrébbtoltuk a problémát: most $x$ helyett a $G$ <b>Green-függvényt</b> kell megtalálnunk. 
 									Ez kinézhető táblázatokból, például a harmonikus oszcillátor rendszerére:
 									$$
 									    G(t) =\Theta(t) \frac{\sin{(\omega_0 t)}}{\omega_0}
@@ -594,7 +594,7 @@
 									    f(t) &= f_0 \sin{(\Omega t)} \Theta(t)
 									\end{aligned}
 									$$
-									Itt a gerjesztőerőben a $\Theta(t)$ lépcsőfüggvény a "$t=0$\textit{ pillanattól kezdve}" szófordulat átfogalmazása matekra.
+									Itt a gerjesztőerőben a $\Theta(t)$ lépcsőfüggvény a "$t=0$ <i>pillanattól kezdve</i>" szófordulat átfogalmazása matekra.
 								</p>
 								<p style="text-align: justify;">
 									Tudjuk, hogy a Green függvény ismeretében a megoldás
@@ -743,7 +743,7 @@
 							</div>
 						</section>
 
-						<section id="five" class="wrapper alt style5">
+						<section id="five" class="wrapper alt style3">
 							<div class="inner">
 								<h3>
 									4.4. példa: Tripla rugós kéttest rendszer
@@ -1034,7 +1034,7 @@
 							</div>
 						</section>
 
-						<section id="six" class="wrapper alt style3">
+						<section id="six" class="wrapper alt style2">
 							<div class="inner">
 								<h3>
 									4.6. példa: Egyszerű molekula
@@ -1205,7 +1205,7 @@
 									4.6.3. Eltolás Green-függvénnyel
 								</h4>
 								<p style="text-align: justify;">
-									Azért nézzük még meg az eltoláshoz kapcsolódó módust is, és lássuk be, hogy \textit{tényleg} az eltolásokhoz kapcsolódik. Legyen a gerjesztőerő
+									Azért nézzük még meg az eltoláshoz kapcsolódó módust is, és lássuk be, hogy <i>tényleg</i> az eltolásokhoz kapcsolódik. Legyen a gerjesztőerő
 									$$
 									    \underline{F} = F \begin{pmatrix}
 									        1 \\ \frac{M}{m} \\ 1
