--- a/teaching/elmecha/ora4.html
+++ b/teaching/elmecha/ora4.html
@@ -831,7 +831,7 @@
 									    \underline{\underline{M}} = \begin{pmatrix}
 									        m && 0 \\
 									        0 && m
-									    \end{pmatrix} \qquad\qquad D = \begin{pmatrix}
+									    \end{pmatrix} \qquad\qquad \underline{\underline{D}} = \begin{pmatrix}
 									        k+K && -K \\
 									        -K && k+K
 									    \end{pmatrix}
