--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -134,7 +134,7 @@
 										<li><a href="elmecha/ora1.html">Óra (09.15.)</a></li>
 										<li><a href="elmecha/ora2.html">Óra (09.22.)</a></li>
 										<li><a href="elmecha/ora3.html">Óra (09.29.)</a></li>
-										<li>Óra (10.06.)</li>
+										<li><a href="elmecha/ora4.html">Óra (10.06.)</a></li>
 										<li>Óra (10.13.)</li>
 									</ol>
 									<ul>
