--- a/teaching/elmecha/ora4.html
+++ b/teaching/elmecha/ora4.html
@@ -818,7 +818,7 @@
 									4.5.1. Sajátmódusok
 								</h4>
 								<p style="text-align: justify;">
-									Legyen most szimmetrikus a rendszer, tehát $m_1 = m_2$ és $k_1 = k_2 ≠ K$. Emlékeztetőül, ekkor a mátrixaink:
+									Legyen most szimmetrikus a rendszer, tehát $m_1 = m_2$ és $k_1 = k_2$ ≠ $K$. Emlékeztetőül, ekkor a mátrixaink:
 									$$\begin{aligned}
 									    \underline{\underline{M}} = \begin{pmatrix}
 									        m && 0 \\
