--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -116,11 +116,13 @@
 										<li>I. beadandó (10.19.)
 											<ul>
 												<li><a href="elmecha/Beadando_I_123.pdf">1.,2.,3. feladat</a></li>
+												<li><a href="elmecha/Beadando_I_45.pdf">4.,5. feladat</a></li>
 											</ul>
 										</li>
 										<li>I. szorgalmi (10.19.)
 											<ul>
 												<li><a href="elmecha/Szorgalmi_I_AB.pdf">A,B feladat</a></li>
+												<li><a href="elmecha/Szorgalmi_I_C.pdf">C feladat</a></li>
 											</ul>
 										</li>
 										<li>II. beadandó</li>
