--- a/teaching/elmecha/ora4.html
+++ b/teaching/elmecha/ora4.html
@@ -71,7 +71,7 @@
 						<section id="one" class="wrapper alt style1">
 							<div class="inner">
 								<h2 class="major">
-									4. óra &nbsp;&nbsp;&nbsp;&nbsp; <a href="04_ora.pdf" download="04_ora.pdf" class="button icon solid fa-download align-right">Letöltés</a>
+									4. óra &nbsp;&nbsp;&nbsp;&nbsp; <a href="04_ora_javitott.pdf" download="04_ora_javitott.pdf" class="button icon solid fa-download align-right">Letöltés</a>
 								</h2>
 								<h3>
 									Kisrezgések, normálmódusok
@@ -442,18 +442,19 @@
 									$$
 									Összeadva a komponenseket
 									$$\begin{aligned}
-									        \dot{x_m}^2+ \dot{y_m}^2 = (l\dot{\varphi}+\dot{r})^2\cos^2{\varphi} + (l\dot{\varphi}-\dot{r})^2\sin^2{\varphi} 
-									        +r^2\dot{\varphi}^2\sin^2{\varphi}+r^2\dot{\varphi}^2\cos^2{\varphi} 
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l\dot{\varphi}+\dot{r})^2\cos^2{\varphi} + (l\dot{\varphi}-\dot{r})^2\sin^2{\varphi} +\\
+									        +r^2\dot{\varphi}^2\sin^2{\varphi}+r^2\dot{\varphi}^2\cos^2{\varphi}+ \\
 									        -2(l\dot{\varphi}+\dot{r})r\dot{\varphi}\cos{\varphi}\sin{\varphi} -2(l\dot{\varphi}-\dot{r})r\dot{\varphi}\cos{\varphi}\sin{\varphi} \\
-									        \dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2 + 2 l\dot{\varphi}\dot{r})\cos^2{\varphi} + (l^2\dot{\varphi}^2+\dot{r}^2 - 2 l\dot{\varphi}\dot{r})\sin^2{\varphi} 
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2 + 2 l\dot{\varphi}\dot{r})\cos^2{\varphi} + (l^2\dot{\varphi}^2+\dot{r}^2 - 2 l\dot{\varphi}\dot{r})\sin^2{\varphi} +\\
 									        +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi}\\
-									        \dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2)\cos^2{\varphi} + 2 l\dot{\varphi}\dot{r}\cos^2{\varphi} + (l^2\dot{\varphi}^2+\dot{r}^2)\sin^2{\varphi} - 2 l\dot{\varphi}\dot{r}\sin^2{\varphi}
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2)\cos^2{\varphi} + 2 l\dot{\varphi}\dot{r}\cos^2{\varphi} + \\
+											+(l^2\dot{\varphi}^2+\dot{r}^2)\sin^2{\varphi} - 2 l\dot{\varphi}\dot{r}\sin^2{\varphi} + \\
 									        +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi}\\
-									        \dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}(\cos^2{\varphi}  - \sin^2{\varphi})
+									        &\dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}(\cos^2{\varphi}  - \sin^2{\varphi})
 									        +l^2\dot{\varphi}^2+\dot{r}^2 +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi} \\
-									        \dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}(1  - 2\sin^2{\varphi})
+									        &\dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}(1  - 2\sin^2{\varphi})
 									        +l^2\dot{\varphi}^2+\dot{r}^2 +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi} \\
-									        \dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}  
+									        &\dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}  
 									        +l^2\dot{\varphi}^2+\dot{r}^2 +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi} -4 l\dot{\varphi}\dot{r} \sin^2{\varphi}
 									\end{aligned}$$
 									Amikkel a kinetikus tagok nagyjából készen is vannak. A potenciális:
