--- a/teaching/elmecha/ora4.html
+++ b/teaching/elmecha/ora4.html
@@ -442,12 +442,12 @@
 									$$
 									Összeadva a komponenseket
 									$$\begin{aligned}
-									        &\dot{x_m}^2+ \dot{y_m}^2 = (l\dot{\varphi}+\dot{r})^2\cos^2{\varphi} + (l\dot{\varphi}-\dot{r})^2\sin^2{\varphi} +\\
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l\dot{\varphi}+\dot{r})^2\cos^2{\varphi} + (l\dot{\varphi}-\dot{r})^2\sin^2{\varphi} +
 									        +r^2\dot{\varphi}^2\sin^2{\varphi}+r^2\dot{\varphi}^2\cos^2{\varphi}+ \\
 									        -2(l\dot{\varphi}+\dot{r})r\dot{\varphi}\cos{\varphi}\sin{\varphi} -2(l\dot{\varphi}-\dot{r})r\dot{\varphi}\cos{\varphi}\sin{\varphi} \\
-									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2 + 2 l\dot{\varphi}\dot{r})\cos^2{\varphi} + (l^2\dot{\varphi}^2+\dot{r}^2 - 2 l\dot{\varphi}\dot{r})\sin^2{\varphi} +\\
-									        +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi}\\
-									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2)\cos^2{\varphi} + 2 l\dot{\varphi}\dot{r}\cos^2{\varphi} + \\
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2 + 2 l\dot{\varphi}\dot{r})\cos^2{\varphi} + (l^2\dot{\varphi}^2+\dot{r}^2 - 2 l\dot{\varphi}\dot{r})\sin^2{\varphi} +
+									        r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi}\\
+									        &\dot{x_m}^2+ \dot{y_m}^2 = (l^2\dot{\varphi}^2+\dot{r}^2)\cos^2{\varphi} + 2 l\dot{\varphi}\dot{r}\cos^2{\varphi} 
 											+(l^2\dot{\varphi}^2+\dot{r}^2)\sin^2{\varphi} - 2 l\dot{\varphi}\dot{r}\sin^2{\varphi} + \\
 									        +r^2\dot{\varphi}^2 -4rl\dot{\varphi}^2\cos{\varphi}\sin{\varphi}\\
 									        &\dot{x_m}^2+ \dot{y_m}^2 = 2 l\dot{\varphi}\dot{r}(\cos^2{\varphi}  - \sin^2{\varphi})
