--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -137,7 +137,7 @@
 										<li><a href="elmecha/ora2.html">Óra (09.22.)</a></li>
 										<li><a href="elmecha/ora3.html">Óra (09.29.)</a></li>
 										<li><a href="elmecha/ora4.html">Óra (10.06.)</a></li>
-										<li>Óra (10.13.)</li>
+										<li>Óra (10.13.) - Gyakorlás</li>
 									</ol>
 									<ul>
 										<li>Első ZH (10.20.)</li>
