--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -144,7 +144,7 @@
 										<li>Őszi szünet (10.27.)</li>
 									</ul>
 									<ol start="6">
-										<li>Óra (11.03.)</li>
+										<li><a href="elmecha/ora6.html">Óra (11.03.)</a></li>
 										<li>Óra (11.10.)</li>
 										<li>Óra (11.17.)</li>
 										<li>Óra (11.24.)</li>
