--- a/teaching/elmecha/ora7.html
+++ b/teaching/elmecha/ora7.html
@@ -284,7 +284,7 @@
 									</p>
 								</details>
 								<div style="text-align: center;">
-									<img src="figs/lesson8/damposc_phase" alt="Csillapított oszcillátor fázistere." width="50%">
+									<img src="figs/lesson8/damposc_phase.png" alt="Csillapított oszcillátor fázistere." width="50%">
 								</div>
 						</section>
 
@@ -394,7 +394,7 @@
 									Ezt össze tudjuk vetni a lenti, gép által generált ábrával:
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson8/higgs_phase" alt="Kétvölgyes potenciál fázistere" width="35%">
+									<img src="figs/lesson8/higgs_phase.png" alt="Kétvölgyes potenciál fázistere" width="35%">
 								</div>
 							</div>
 						</section>
@@ -465,7 +465,7 @@
 									Fent egy picit összenyomódik, lent pedig egy picit megnyúlik.
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson7/rud2.png" alt="Forgatott rúd, komponensekre bontva" width="40%">
+									<img src="figs/lesson8/rugosinga.png" alt="Rugós inga mozgása" width="40%">
 								</div>
 							</div>
 						</section>
