--- a/teaching/elmecha/ora7.html
+++ b/teaching/elmecha/ora7.html
@@ -271,7 +271,7 @@
 									\end{aligned} $$
 									Ha kellően sok idő eltelt, akkor $e^{-\gamma t} \approx 0$, tehát az elsőt elhanyagolhatjuk.
 									A második előjele pont ellentétes a kitérítés irányával: ez a pont egy stabil vonzópont lesz.
-									A fázistéren ezt fel tudjuk rajzolni a sima oszcillátor alapján, csak egy különbséggel: a trajektóriák az origóba tartanak, miután $t\neq0$.
+									A fázistéren ezt fel tudjuk rajzolni a sima oszcillátor alapján, csak egy különbséggel: a trajektóriák az origóba tartanak, miután $t>0$.
 									Attól függően, hogy túlcsillapított-e az oszcillátorunk; vagy keringenek körülötte párat, vagy rögtön belezuhannak.
 								</p>
 								<details>
@@ -337,7 +337,7 @@
 										<li>Ha $\forall \mathcal{R}e(\lambda)>0$, akkor taszító.</li>
 										<li>Ha $\forall \mathcal{R}e(\lambda)<0$, akkor vonzó.</li>
 										<li>Ha is-is, akkor nyeregpont.</li>
-										<li>Illetve ha $\mathcal{I}m(\lambda) \neq 0$, akkor oszcilláló mozgást fogunk tapasztalni.</li>
+										<li>Illetve ha $\mathcal{I}m(\lambda)$≠$0$, akkor oszcilláló mozgást fogunk tapasztalni.</li>
 									</ul>
 								</p>
 								<p style="text-align: justify;">
