--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -145,7 +145,7 @@
 									</ul>
 									<ol start="6">
 										<li><a href="elmecha/ora6.html">Óra (11.03.)</a></li>
-										<li>Óra (11.10.)</li>
+										<li><a href="elmecha/ora7.html">Óra (11.10.)</a></li>
 										<li>Óra (11.17.)</li>
 										<li>Óra (11.24.)</li>
 									</ol>
